--- a/online-store/clients/package.json
+++ b/online-store/clients/package.json
@@ -15,8 +15,10 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "proxy": "http://localhost:3000/api/user/login"
   },
+
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
